--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,12 @@
 # main links links
 main:
-  - title: "About"
-    url: https://mmistakes.github.io/minimal-mistakes/about/
-  - title: "Posts"
+  - title: Year Archive
     url: /year-archive/
   - title: "Collections"
     url: /collection-archive/
   - title: "Sitemap"
     url: /sitemap/
-  - title: "Extra Menu Item 1"
-    url: /
-  - title: "Extra Menu Item 2"
-    url: /
-  - title: "Extra Menu Item Long Title"
-    url: /
+
 
 # sidebar navigation list sample
 sidebar-sample:
