--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ name                     : "Mike Hathaway"
 description              : "Mike's Website."
 url                      : "https://mjh2901.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/mikehathaway"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "mjh2901/mikehathaway# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/apple-touch-icon.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : "MikeHathaway.com" # overrides the website title displayed in the masthead, use " " for no title
@@ -253,7 +253,7 @@ compress_html:
 
 # Collections
 collections:
-  recipes:
+  posts:
     output: true
     permalink: /:collection/:path/
   pets:
