--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title                    : "Mike Hathaway's Site"
 title_separator          : "-"
 subtitle                 : "Ideas, Tutorials, Pictures & Code"
 name                     : "Mike Hathaway"
-description              : "Mike's Website."
+description              : "Mike's Website"
 url                      : "https://mjh2901.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/mikehathaway"
 repository               : "mjh2901/mikehathaway# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
