--- a/_config.yml
+++ b/_config.yml
@@ -256,9 +256,7 @@ collections:
   posts:
     output: true
     permalink: /:collection/:path/
-  pets:
-    output: true
-    permalink: /:collection/:path/
+
   portfolio:
     output: true
     permalink: /:collection/:path/
@@ -273,7 +271,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      read_time: false
       share: true
       related: true
   # _pages
@@ -283,14 +281,6 @@ defaults:
     values:
       layout: single
       author_profile: true
-  # _pets
-  - scope:
-      path: ""
-      type: pets
-    values:
-      layout: single
-      author_profile: true
-      share: true
   # _portfolio
   - scope:
       path: ""
