--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,14 @@
 # main links links
 main:
-  - title: Year Archive
-    url: /year-archive/
+  - title: About
+    url:/about/
+  - title: Resume
+    url: /resume/
+  - title: Contact
+    url: /contact/  
+
+#  - title: Year Archive
+#    url: /year-archive/
   - title: "Collections"
     url: /collection-archive/
   - title: "Sitemap"
