--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ title_separator          : "-"
 subtitle                 : "Ideas, Tutorials, Pictures & Code"
 name                     : "Mike Hathaway"
 description              : "Mike's Website"
-url                      : "https://mjh2901.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/mikehathaway"
+url                      : "https://mikehathaway.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : # "/mikehathaway"
 repository               : "mjh2901/mikehathaway" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/train.png" # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/apple-touch-icon.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
