--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : "mikehathawy"
+  username               : "mikehathaway"
 facebook:
   username               : "mikehathaway"
   app_id                 :
